# nautilus-latex

./: CMakeLists.txt  Makefile  README.md  install_cli  nautilus-latex.py
setup/: install  install_cli  uninstall  uninstall_cli
src/: config.ini  latex_cleanup.py  support.py
